testsuite/tests/typecheck/should_compile/tc248.hs
module ShouldCompile where

identity :: forall a. a -> a
identity x = x
